--- a/files/en-us/learn/server-side/django/django_assessment_blog/index.html
+++ b/files/en-us/learn/server-side/django/django_assessment_blog/index.html
@@ -164,8 +164,7 @@ tags:
 </ul>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>There are of course many other tests you can run. Use your discretion, but we'll expect you to do at least the tests above.</p>
+  <p><strong>Note:</strong> There are of course many other tests you can run. Use your discretion, but we'll expect you to do at least the tests above.</p>
 </div>
 
 <p>The following section shows <a href="#screenshots">screenshots</a> of a site that implements the requirements above.</p>
