--- a/files/en-us/learn/server-side/express_nodejs/skeleton_website/index.html
+++ b/files/en-us/learn/server-side/express_nodejs/skeleton_website/index.html
@@ -35,14 +35,14 @@ tags:
 
 <p>This article shows how you can create a "skeleton" website using the <a href="https://expressjs.com/en/starter/generator.html">Express Application Generator</a> tool, which you can then populate with site-specific routes, views/templates, and database calls. In this case, we'll use the tool to create the framework for our <a href="/en-US/docs/Learn/Server-side/Express_Nodejs/Tutorial_local_library_website">Local Library website</a>, to which we'll later add all the other code needed by the site. The process is extremely simple, requiring only that you invoke the generator on the command line with a new project name, optionally also specifying the site's template engine and CSS generator.</p>
 
-<p><span style="line-height: 1.5;">The following sections show you how to call the application generator, and provides a little explanation about the different view/CSS options. We'll also explain how the skeleton website is structured. At the end, we'll show how you can run the website to verify that it works.</span></p>
+<p>The following sections show you how to call the application generator, and provides a little explanation about the different view/CSS options. We'll also explain how the skeleton website is structured. At the end, we'll show how you can run the website to verify that it works.</p>
 
-<div class="note">
-<p><span style="line-height: 1.5;"><strong>Note</strong>: The <em>Express Application Generator</em> is not the only generator for Express applications, and the generated project is not the only viable way to structure your files and directories. The generated site does however have a modular structure that is easy to extend and understand. For information about a <em>minimal</em> Express application, see <a href="https://expressjs.com/en/starter/hello-world.html">Hello world example</a> (Express docs).</span></p>
+<div class="notecard note">
+<p><strong>Note:</strong> The <em>Express Application Generator</em> is not the only generator for Express applications, and the generated project is not the only viable way to structure your files and directories. The generated site does however have a modular structure that is easy to extend and understand. For information about a <em>minimal</em> Express application, see <a href="https://expressjs.com/en/starter/hello-world.html">Hello world example</a> (Express docs).</p>
 </div>
 
-<div class="note">
-<p><span style="line-height: 1.5;"><strong>Note</strong>: This tutorial uses the version of <em>Express</em> that is defined in the <strong>package.json</strong> created by the <em>Express Application Generator.</em> This is not (necessarily) the latest version!</span></p>
+<div class="notecard note">
+<p><strong>Note:</strong> This tutorial uses the version of <em>Express</em> that is defined in the <strong>package.json</strong> created by the <em>Express Application Generator.</em> This is not (necessarily) the latest version!</p>
 </div>
 
 <h2 id="Using_the_application_generator">Using the application generator</h2>
@@ -79,8 +79,7 @@ tags:
 <p>You can also choose a view (template) engine using <code>--view</code> and/or a CSS generation engine using <code>--css</code>.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The other options for choosing template engines (e.g. <code>--hogan</code>, <code>--ejs</code>, <code>--hbs</code> etc.) are deprecated. Use <code>--view</code> (or <code>-v</code>).</p>
+  <p><strong>Note:</strong> The other options for choosing template engines (e.g. <code>--hogan</code>, <code>--ejs</code>, <code>--hbs</code> etc.) are deprecated. Use <code>--view</code> (or <code>-v</code>).</p>
 </div>
 
 <h3 id="What_view_engine_should_I_use">What view engine should I use?</h3>
@@ -88,8 +87,7 @@ tags:
 <p>The <em>Express Application Generator</em> allows you to configure a number of popular view/templating engines, including <a href="https://www.npmjs.com/package/ejs">EJS</a>, <a href="https://github.com/donpark/hbs">Hbs</a>, <a href="https://pugjs.org/api/getting-started.html">Pug</a> (Jade), <a href="https://www.npmjs.com/package/twig">Twig</a>, and <a href="https://www.npmjs.com/package/vash">Vash</a>, although it chooses Jade by default if you don't specify a view option. Express itself can also support a large number of other templating languages <a href="https://github.com/expressjs/express/wiki#template-engines">out of the box</a>.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>If you want to use a template engine that isn't supported by the generator then see <a href="https://expressjs.com/en/guide/using-template-engines.html">Using template engines with Express</a> (Express docs) and the documentation for your target view engine.</p>
+  <p><strong>Note:</strong> If you want to use a template engine that isn't supported by the generator then see <a href="https://expressjs.com/en/guide/using-template-engines.html">Using template engines with Express</a> (Express docs) and the documentation for your target view engine.</p>
 </div>
 
 <p>Generally speaking, you should select a templating engine that delivers all the functionality you need and allows you to be productive sooner — or in other words, in the same way that you choose any other component! Some of the things to consider when comparing template engines:</p>
@@ -125,8 +123,7 @@ tags:
 <p>The <em>Express Application Generator</em> allows you to create a project that is configured to use the most common CSS stylesheet engines: <a href="https://lesscss.org/">LESS</a>, <a href="https://sass-lang.com/">SASS</a>, <a href="http://compass-style.org/">Compass</a>, <a href="https://stylus-lang.com/">Stylus</a>.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>CSS has some limitations that make certain tasks difficult. CSS stylesheet engines allow you to use more powerful syntax for defining your CSS and then compile the definition into plain-old CSS for browsers to use.</p>
+  <p><strong>Note:</strong> CSS has some limitations that make certain tasks difficult. CSS stylesheet engines allow you to use more powerful syntax for defining your CSS and then compile the definition into plain-old CSS for browsers to use.</p>
 </div>
 
 <p>As with templating engines, you should use the stylesheet engine that will allow your team to be most productive. For this project, we'll use vanilla CSS (the default) as our CSS requirements are not sufficiently complicated to justify using anything else.</p>
@@ -202,8 +199,7 @@ npm install</pre>
    <li>On Windows Powershell, use this command:
     <pre class="brush: bash">$ENV:DEBUG = "express-locallibrary-tutorial:*"; npm start</pre>
     <div class="notecard note">
-      <h4>Note</h4>
-        <p>Powershell commands are not covered further in this tutorial (The provided "Windows" commands assume you're using the Windows CMD prompt.)</p>
+        <p><strong>Note:</strong> Powershell commands are not covered further in this tutorial (The provided "Windows" commands assume you're using the Windows CMD prompt.)</p>
     </div>
    </li>
    <li>On macOS or Linux, use this command:
@@ -222,8 +218,7 @@ npm install</pre>
 <p>Congratulations! You now have a working Express application that can be accessed via port 3000.</p>
 
 <div class="notecard note">
-<h4>Note</h4>
-  <p>You could also start the app just using the <code>npm start</code> command. Specifying the DEBUG variable as shown enables console logging/debugging. For example, when you visit the above page you'll see debug output like this:</p>
+  <p><strong>Note:</strong> You could also start the app just using the <code>npm start</code> command. Specifying the DEBUG variable as shown enables console logging/debugging. For example, when you visit the above page you'll see debug output like this:</p>
 
 <pre class="brush: bash">&gt;SET DEBUG=express-locallibrary-tutorial:* &amp; npm start
 
@@ -273,8 +268,7 @@ GET /stylesheets/style.css 200 4.886 ms - 111
 <p>We can now start the server in almost exactly the same way as previously, but using the <code>devstart</code> command.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Now if you edit any file in the project the server will restart (or you can restart it by typing <code>rs</code> on the command prompt at any time). You will still need to reload the browser to refresh the page.</p>
+  <p><strong>Note:</strong> Now if you edit any file in the project the server will restart (or you can restart it by typing <code>rs</code> on the command prompt at any time). You will still need to reload the browser to refresh the page.</p>
 
   <p>We now have to call "<code>npm run <em>&lt;scriptname&gt;</em></code>" rather than just <code>npm start</code>, because "start" is actually an NPM command that is mapped to the named script. We could have replaced the command in the <em>start</em> script but we only want to use <em>nodemon</em> during development, so it makes sense to create a new script command.</p>
 
@@ -373,8 +367,7 @@ GET /stylesheets/style.css 200 4.886 ms - 111
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p><code>require()</code> is a global node function that is used to import modules into the current file. Here we specify <strong>app.js</strong> module using a relative path and omitting the optional (.<strong>js</strong>) file extension.</p>
+  <p><strong>Note:</strong> <code>require()</code> is a global node function that is used to import modules into the current file. Here we specify <strong>app.js</strong> module using a relative path and omitting the optional (.<strong>js</strong>) file extension.</p>
 </div>
 
 <p>The remainder of the code in this file sets up a node HTTP server with <code>app</code> set to a specific port (defined in an environment variable or 3000 if the variable isn't defined), and starts listening and reporting server errors and connections. For now you don't really need to know anything else about the code (everything in this file is "boilerplate"), but feel free to review it if you're interested.</p>
@@ -407,8 +400,7 @@ var usersRouter = require('./routes/users');
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>At this point, we have just <em>imported</em> the module; we haven't actually used its routes yet (this happens just a little bit further down the file).</p>
+  <p><strong>Note:</strong> At this point, we have just <em>imported</em> the module; we haven't actually used its routes yet (this happens just a little bit further down the file).</p>
 </div>
 
 <p>Next, we create the <code>app</code> object using our imported <em>express</em> module, and then use it to set up the view (template) engine. There are two parts to setting up the engine. First, we set the '<code>views</code>' value to specify the folder where the templates will be stored (in this case the subfolder <strong>/views</strong>). Then we set the '<code>view engine</code>' value to specify the template library (in this case "pug").</p>
@@ -436,8 +428,7 @@ app.use('/users', usersRouter);
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The paths specified above (<code>'/'</code> and '<code>/users'</code>) are treated as a prefix to routes defined in the imported files.
+  <p><strong>Note:</strong> The paths specified above (<code>'/'</code> and '<code>/users'</code>) are treated as a prefix to routes defined in the imported files.
     So for example, if the imported <strong>users</strong> module defines a route for <code>/profile</code>, you would access that route at <code>/users/profile</code>. We'll talk more about routes in a later article.</p>
 </div>
 
