--- a/files/en-us/learn/server-side/django/development_environment/index.html
+++ b/files/en-us/learn/server-side/django/development_environment/index.html
@@ -55,8 +55,7 @@ tags:
 <p>Each of these options requires a slightly different configuration and setup. The following subsections explain some of your choices. For the rest of the article, we'll show you how to setup Django on a small number of operating systems, and that setup will be assumed throughout the rest of this module.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Other possible installation options are covered in the official Django documentation. We link to the <a href="#see_also">appropriate documents below</a>.</p>
+  <p><strong>Note:</strong> Other possible installation options are covered in the official Django documentation. We link to the <a href="#see_also">appropriate documents below</a>.</p>
 </div>
 
 <h4 id="What_operating_systems_are_supported">What operating systems are supported?</h4>
@@ -72,8 +71,7 @@ tags:
  The Django project <em>recommends</em> (and "officially supports") using the newest available supported Python release.</p>
 
  <div class="notecard note">
-  <h4>Note</h4>
-  <p>Python 2.7 cannot be used with the current releases of Django (The Django 1.11.x series is the last to support Python 2.7).</p>
+  <p><strong>Note:</strong> Python 2.7 cannot be used with the current releases of Django (The Django 1.11.x series is the last to support Python 2.7).</p>
 </div>
 
 <h4 id="Where_can_we_download_Django">Where can we download Django?</h4>
@@ -95,8 +93,7 @@ tags:
 <p>For this article (and most of this module) we will be using the <em>SQLite</em> database, which stores its data in a file. SQLite is intended for use as a lightweight database and can’t support a high level of concurrency. It is, however, an excellent choice for applications that are primarily read-only.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Django is configured to use SQLite by default when you start your website project using the standard tools (<em>django-admin</em>). It's a great choice when you're getting started because it requires no additional configuration or setup. </p>
+  <p><strong>Note:</strong> Django is configured to use SQLite by default when you start your website project using the standard tools (<em>django-admin</em>). It's a great choice when you're getting started because it requires no additional configuration or setup. </p>
 </div>
 
 <h4 id="Installing_system-wide_or_in_a_Python_virtual_environment">Installing system-wide or in a Python virtual environment?</h4>
@@ -104,8 +101,7 @@ tags:
 <p>When you install Python3 you get a single global environment that is shared by all Python3 code. While you can install whatever Python packages you like in the environment, you can only install one particular version of each package at a time.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Python applications installed into the global environment can potentially conflict with each other (i.e. if they depend on different versions of the same package). </p>
+  <p><strong>Note:</strong> Python applications installed into the global environment can potentially conflict with each other (i.e. if they depend on different versions of the same package). </p>
 </div>
 
 <p>If you install Django into the default/global environment then you will only be able to target one version of Django on the computer. This can be a problem if you want to create new websites (using the latest version of Django) while still maintaining websites that rely on older versions.</p>
@@ -121,8 +117,7 @@ tags:
 <p>This section briefly explains how you can check what versions of Python are present, and install new versions as needed, for Ubuntu Linux 20.04, macOS, and Windows 10.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Depending on your platform, you may also be able to install Python/pip from the operating system's own package manager or via other mechanisms. For most platforms, you can download the required installation files from <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a> and install them using the appropriate platform-specific method.</p>
+  <p><strong>Note:</strong> Depending on your platform, you may also be able to install Python/pip from the operating system's own package manager or via other mechanisms. For most platforms, you can download the required installation files from <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a> and install them using the appropriate platform-specific method.</p>
 </div>
 
 <h3 id="Ubuntu_20.04">Ubuntu 20.04</h3>
@@ -152,8 +147,7 @@ tags:
    <li>Go to <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a></li>
    <li>Select the <strong>Download Python 3.8.6</strong> button (the exact version number may differ).
     <div class="notecard note">
-      <h4>Note</h4>
-      <p>The version offered may be different. Ensure that the version you download is supported by Django (if needed, links for getting older versions can be found on the same page).</p>
+      <p><strong>Note:</strong> The version offered may be different. Ensure that the version you download is supported by Django (if needed, links for getting older versions can be found on the same page).</p>
     </div>
    </li>
   </ol>
@@ -180,8 +174,7 @@ tags:
    <li>Go to <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a></li>
    <li>Select the <strong>Download Python 3.8.6</strong> button (the exact version number may differ).
     <div class="notecard note">
-      <h4>Note</h4>
-      <p>The version offered may be different. Ensure that the version you download <a href="https://docs.djangoproject.com/en/3.1/faq/install/#what-python-version-can-i-use-with-django">is supported by Django</a> (if needed, links for getting older versions can be found on the same page).</p>
+      <p><strong>Note:</strong> The version offered may be different. Ensure that the version you download <a href="https://docs.djangoproject.com/en/3.1/faq/install/#what-python-version-can-i-use-with-django">is supported by Django</a> (if needed, links for getting older versions can be found on the same page).</p>
     </div>
    </li>
   </ol>
@@ -200,8 +193,7 @@ tags:
 <pre class="brush: bash">pip3 list</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The installer should set up everything you need for the above command to work. If however you get a message that Python cannot be found, you may have forgotten to add it to your system path. You can do this by running the installer again, selecting "Modify", and checking the box labeled "Add Python to environment variables" on the second page.</p>
+  <p><strong>Note:</strong> The installer should set up everything you need for the above command to work. If however you get a message that Python cannot be found, you may have forgotten to add it to your system path. You can do this by running the installer again, selecting "Modify", and checking the box labeled "Add Python to environment variables" on the second page.</p>
 </div>
 
 <h2 id="Using_Django_inside_a_Python_virtual_environment">Using Django inside a Python virtual environment</h2>
@@ -228,8 +220,7 @@ source /usr/local/bin/virtualenvwrapper.sh
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The <code>VIRTUALENVWRAPPER_PYTHON</code> and <code>VIRTUALENVWRAPPER_VIRTUALENV_ARGS </code>variables point to the normal installation location for Python3, and <code>source /usr/local/bin/virtualenvwrapper.sh</code> points to the normal location of the <code>virtualenvwrapper.sh</code> script. If the <em>virtualenv</em> doesn't work when you test it, one thing to check is that Python and the script are in the expected location (and then change the startup file appropriately).<br>
+  <p><strong>Note:</strong> The <code>VIRTUALENVWRAPPER_PYTHON</code> and <code>VIRTUALENVWRAPPER_VIRTUALENV_ARGS </code>variables point to the normal installation location for Python3, and <code>source /usr/local/bin/virtualenvwrapper.sh</code> points to the normal location of the <code>virtualenvwrapper.sh</code> script. If the <em>virtualenv</em> doesn't work when you test it, one thing to check is that Python and the script are in the expected location (and then change the startup file appropriately).<br>
  <br>
  You can find the correct locations for your system using the commands <code>which virtualenvwrapper.sh</code> and <code>which python3</code>.</p>
 </div>
@@ -267,8 +258,7 @@ export PROJECT_HOME=$HOME/Devel
 source /usr/local/bin/virtualenvwrapper.sh</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The <code>VIRTUALENVWRAPPER_PYTHON</code> variable points to the normal installation location for Python3, and <code>source /usr/local/bin/virtualenvwrapper.sh</code> points to the normal location of the <code>virtualenvwrapper.sh</code> script. If the <em>virtualenv</em> doesn't work when you test it, one thing to check is that Python and the script are in the expected location (and then change the startup file appropriately).</p>
+  <p><strong>Note:</strong> The <code>VIRTUALENVWRAPPER_PYTHON</code> variable points to the normal installation location for Python3, and <code>source /usr/local/bin/virtualenvwrapper.sh</code> points to the normal location of the <code>virtualenvwrapper.sh</code> script. If the <em>virtualenv</em> doesn't work when you test it, one thing to check is that Python and the script are in the expected location (and then change the startup file appropriately).</p>
 
   <p>For example, one installation test on macOS ended up with the following lines being necessary in the startup file:</p>
 
@@ -287,8 +277,7 @@ source /Library/Frameworks/Python.framework/Versions/3.7/bin/virtualenvwrapper.s
 <p>At this point, you may see a bunch of scripts being run (the same scripts as for the Ubuntu installation). You should now be able to create a new virtual environment with the <code>mkvirtualenv</code> command.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>If you can't find the startup file to edit in the finder, you can also open this in the terminal using nano.</p>
+  <p><strong>Note:</strong> If you can't find the startup file to edit in the finder, you can also open this in the terminal using nano.</p>
 
   <p>Assuming you're using bash, the commands look something like this:</p>
 
@@ -326,8 +315,7 @@ virtualenvwrapper.user_scripts creating /home/ubuntu/.virtualenvs/t_env7/bin/get
 <p>Now you're inside the virtual environment you can install Django and start developing.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>From now on in this article (and indeed the module) please assume that any commands are run within a Python virtual environment like the one we set up above.</p>
+  <p><strong>Note:</strong> From now on in this article (and indeed the module) please assume that any commands are run within a Python virtual environment like the one we set up above.</p>
 </div>
 
 <h3 id="Using_a_virtual_environment">Using a virtual environment</h3>
@@ -359,8 +347,7 @@ py -3 -m django --version
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>If the above Windows command does not show a django module present, try:</p>
+  <p><strong>Note:</strong> If the above Windows command does not show a django module present, try:</p>
 
 <pre class="brush: bash">py -m django --version</pre>
 
@@ -402,8 +389,7 @@ Quit the server with CONTROL-C.
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The above command shows the Linux/macOS command. You can ignore the warnings about  "18 unapplied migration(s)" at this point!</p>
+  <p><strong>Note:</strong> The above command shows the Linux/macOS command. You can ignore the warnings about  "18 unapplied migration(s)" at this point!</p>
 </div>
 
 <p>Once the server is running you can view the site by navigating to the following URL on your local web browser: <code>http://127.0.0.1:8000/</code>. You should see a site that looks like this:</p>
