--- a/files/en-us/learn/server-side/django/generic_views/index.html
+++ b/files/en-us/learn/server-side/django/generic_views/index.html
@@ -69,8 +69,7 @@ class BookListView(generic.ListView):
 <p>That's it! The generic view will query the database to get all records for the specified model (<code>Book</code>) then render a template located at <strong>/locallibrary/catalog/templates/catalog/book_list.html</strong> (which we will create below). Within the template you can access the list of books with the template variable named <code>object_list</code> OR <code>book_list</code> (i.e. generically "<code><em>the_model_name</em>_list</code>").</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>This awkward path for the template location isn't a misprint — the generic views look for templates in <code>/<em>application_name</em>/<em>the_model_name</em>_list.html</code> (<code>catalog/book_list.html</code> in this case) inside the application's <code>/<em>application_name</em>/templates/</code> directory (<code>/catalog/templates/)</code>.</p>
+  <p><strong>Note:</strong> This awkward path for the template location isn't a misprint — the generic views look for templates in <code>/<em>application_name</em>/<em>the_model_name</em>_list.html</code> (<code>catalog/book_list.html</code> in this case) inside the application's <code>/<em>application_name</em>/templates/</code> directory (<code>/catalog/templates/)</code>.</p>
 </div>
 
 <p>You can add attributes to change the default behavior above. For example, you can specify another template file if you need to have multiple views that use this same model, or you might want to use a different template variable name if <code>book_list</code> is not intuitive for your particular template use-case. Possibly the most useful variation is to change/filter the subset of results that are returned — so instead of listing all books you might list top 5 books that were read by other users.</p>
@@ -115,8 +114,7 @@ class BookListView(generic.ListView):
 </ul>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Check out <a href="https://docs.djangoproject.com/en/3.1/topics/class-based-views/generic-display/">Built-in class-based generic views</a> (Django docs) for many more examples of what you can do.</p>
+  <p><strong>Note:</strong> Check out <a href="https://docs.djangoproject.com/en/3.1/topics/class-based-views/generic-display/">Built-in class-based generic views</a> (Django docs) for many more examples of what you can do.</p>
 </div>
 
 <h3 id="Creating_the_List_View_template">Creating the List View template</h3>
@@ -180,8 +178,7 @@ class BookListView(generic.ListView):
 <p>We can also call <em>functions</em> in the model from within our template — in this case we call <code>Book.get_absolute_url()</code> to get a URL you could use to display the associated detail record. This works provided the function does not have any arguments (there is no way to pass arguments!)</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>We have to be a little careful of "side effects" when calling functions in templates. Here we just get a URL to display, but a function can do pretty much anything — we wouldn't want to delete our database (for example) just by rendering our template!</p>
+  <p><strong>Note:</strong> We have to be a little careful of "side effects" when calling functions in templates. Here we just get a URL to display, but a function can do pretty much anything — we wouldn't want to delete our database (for example) just by rendering our template!</p>
 </div>
 
 <h4 id="Update_the_base_template">Update the base template</h4>
@@ -215,8 +212,7 @@ class BookListView(generic.ListView):
 <p>In this case we use <code>'&lt;int:pk&gt;'</code> to capture the book id, which must be a specially formatted string and pass it to the view as a parameter named <code>pk</code> (short for primary key). This is the id that is being used to store the book uniquely in the database, as defined in the Book Model.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>As discussed previously, our matched URL is actually <code>catalog/book/&lt;digits&gt;</code> (because we are in the <strong>catalog</strong> application, <code>/catalog/</code> is assumed).</p>
+  <p><strong>Note:</strong> As discussed previously, our matched URL is actually <code>catalog/book/&lt;digits&gt;</code> (because we are in the <strong>catalog</strong> application, <code>/catalog/</code> is assumed).</p>
 </div>
 
 <div class="notecard warning">
@@ -227,8 +223,7 @@ class BookListView(generic.ListView):
 <h4 id="Advanced_path_matchingregular_expression_primer">Advanced path matching/regular expression primer</h4>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>You won't need this section to complete the tutorial! We provide it because knowing this option is likely to be useful in your Django-centric future.</p>
+  <p><strong>Note:</strong> You won't need this section to complete the tutorial! We provide it because knowing this option is likely to be useful in your Django-centric future.</p>
 </div>
 
 <p>The pattern matching provided by <code>path()</code> is simple and useful for the (very common) cases where you just want to capture <em>any</em> string or integer. If you need more refined filtering (for example, to filter only strings that have a certain number of characters) then you can use the <a href="https://docs.djangoproject.com/en/3.1/ref/urls/#django.urls.re_path">re_path()</a> method.</p>
@@ -331,8 +326,7 @@ class BookListView(generic.ListView):
 <p>You can capture multiple patterns in the one match, and hence encode lots of different information in a URL.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>As a challenge, consider how you might encode a URL to list all books released in a particular year, month, day, and the RE that could be used to match it.</p>
+  <p><strong>Note:</strong> As a challenge, consider how you might encode a URL to list all books released in a particular year, month, day, and the RE that could be used to match it.</p>
 </div>
 
 <h4 id="Passing_additional_options_in_your_URL_maps">Passing additional options in your URL maps</h4>
@@ -345,8 +339,7 @@ class BookListView(generic.ListView):
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Both named captured patterns and dictionary options are passed to the view as <em>named</em> arguments. If you use the <strong>same name</strong> for both a capture pattern and a dictionary key, then the dictionary option will be used.</p>
+  <p><strong>Note:</strong> Both named captured patterns and dictionary options are passed to the view as <em>named</em> arguments. If you use the <strong>same name</strong> for both a capture pattern and a dictionary key, then the dictionary option will be used.</p>
 </div>
 
 <h3 id="View_class-based_2">View (class-based)</h3>
@@ -419,8 +412,7 @@ def book_detail_view(request, primary_key):
 
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The author link in the template above has an empty URL because we've not yet created an author detail page to link to. Once the detail page exists we can get its URL with either of these two approaches:</p>
+  <p><strong>Note:</strong> The author link in the template above has an empty URL because we've not yet created an author detail page to link to. Once the detail page exists we can get its URL with either of these two approaches:</p>
   <ul>
     <li>Use the <code>url</code> template tag to reverse the 'author-detail' URL (defined in the URL mapper), passing it the author instance for the book: 
       <pre>&lt;a href="<strong>{% url 'author-detail' book.author.pk %}</strong>"&gt;\{{ book.author }}&lt;/a&gt;</pre>
@@ -450,8 +442,7 @@ def book_detail_view(request, primary_key):
 <p>This method is needed because you declare a <code>ForeignKey</code> (one-to many) field in only the "one" side of the relationship (the <code>BookInstance</code>). Since you don't do anything to declare the relationship in the other ("many") models, it (the <code>Book</code>) doesn't have any field to get the set of associated records. To overcome this problem, Django constructs an appropriately named "reverse lookup" function that you can use. The name of the function is constructed by lower-casing the model name where the <code>ForeignKey</code> was declared, followed by <code>_set</code> (i.e. so the function created in <code>Book</code> is <code>bookinstance_set()</code>).</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Here we use <code>all()</code> to get all records (the default). While you can use the <code>filter()</code> method to get a subset of records in code, you can't do this directly in templates because you can't specify arguments to functions.</p>
+  <p><strong>Note:</strong> Here we use <code>all()</code> to get all records (the default). While you can use the <code>filter()</code> method to get a subset of records in code, you can't do this directly in templates because you can't specify arguments to functions.</p>
 
   <p>Beware also that if you don't define an order (on your class-based view or model), you will also see errors from the development server like this one:</p>
 
@@ -586,7 +577,7 @@ def book_detail_view(request, primary_key):
 <p>The code required for the URL mappers and the views should be virtually identical to the <code>Book</code> list and detail views we created above. The templates will be different but will share similar behavior.</p>
 
 <div class="note notecard">
-  <h4>Note</h4>
+  <p><strong>Note:</strong></p>
   <ul>
     <li>Once you've created the URL mapper for the author list page you will also need to update the <strong>All authors</strong> link in the base template. Follow the <a href="#update_the_base_template">same process</a> as we did when we updated the <strong>All books</strong> link.</li>
     <li>Once you've created the URL mapper for the author detail page, you should also update the <a href="#creating_the_detail_view_template">book detail view template</a> (<strong>/locallibrary/catalog/templates/catalog/book_detail.html</strong>) so that the author link points to your new author detail page (rather than being an empty URL). The recommended way to do this is to call <code>get_absolute_url()</code> on the author model as shown below.
