--- a/files/en-us/learn/server-side/django/home_page/index.html
+++ b/files/en-us/learn/server-side/django/home_page/index.html
@@ -66,8 +66,7 @@ tags:
 <p>By contrast the final two URLs will display detailed information about a specific book or author.  These URLs encode the identity of the item to display (represented by <code><em>&lt;id&gt;</em></code> above). The URL mapper will extract the encoded information and pass it to the view, and the view will dynamically determine what information to get from the database. By encoding the information in the URL we will use a single set of a url mapping, a view, and a template to handle all books (or authors). </p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p> With Django, you can construct your URLs however you require — you can encode information in the body of the URL as shown above, or include <code>GET</code> parameters in the URL, for example <code>/book/?id=6</code>. Whichever approach you use, the URLs should be kept clean, logical, and readable, as <a href="https://www.w3.org/Provider/Style/URI">recommended by the W3C</a>.<br>
+  <p><strong>Note:</strong> With Django, you can construct your URLs however you require — you can encode information in the body of the URL as shown above, or include <code>GET</code> parameters in the URL, for example <code>/book/?id=6</code>. Whichever approach you use, the URLs should be kept clean, logical, and readable, as <a href="https://www.w3.org/Provider/Style/URI">recommended by the W3C</a>.<br>
  The Django documentation recommends encoding information in the body of the URL to achieve better URL design.</p>
 </div>
 
@@ -78,8 +77,7 @@ tags:
 <p>The first page we'll create is the index page (<code>catalog/</code>). The index page will include some static HTML, along with generated "counts" of different records in the database. To make this work we'll create a URL mapping, a view, and a template. </p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>It's worth paying a little extra attention in this section. Most of the information also applies to the other pages we'll create.</p>
+  <p><strong>Note:</strong> It's worth paying a little extra attention in this section. Most of the information also applies to the other pages we'll create.</p>
 </div>
 
 <h3 id="URL_mapping">URL mapping</h3>
@@ -94,8 +92,7 @@ tags:
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Whenever Django encounters the import function <code><a href="https://docs.djangoproject.com/en/3.1/ref/urls/#django.urls.include" title="django.conf.urls.include">django.urls.include()</a></code>, it splits the URL string at the designated end character and sends the remaining substring to the included <em>URLconf</em> module for further processing.</p>
+  <p><strong>Note:</strong> Whenever Django encounters the import function <code><a href="https://docs.djangoproject.com/en/3.1/ref/urls/#django.urls.include" title="django.conf.urls.include">django.urls.include()</a></code>, it splits the URL string at the designated end character and sends the remaining substring to the included <em>URLconf</em> module for further processing.</p>
 </div>
 
 <p>We also created a placeholder file for the <em>URLConf</em> module, named <strong>/catalog/urls.py</strong>. Add the following lines to that file: </p>
@@ -116,8 +113,7 @@ tags:
 <pre class="brush: html">&lt;a href="<strong>{% url 'index' %}</strong>"&gt;Home&lt;/a&gt;.</pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>We can hard code the link as in <code>&lt;a href="<strong>/catalog/</strong>"&gt;Home&lt;/a&gt;</code>), but if we change the pattern for our home page, for example, to <code>/catalog/index</code>) the templates will no longer link correctly. Using a reversed url mapping is more robust.</p>
+  <p><strong>Note:</strong> We can hard code the link as in <code>&lt;a href="<strong>/catalog/</strong>"&gt;Home&lt;/a&gt;</code>), but if we change the pattern for our home page, for example, to <code>/catalog/index</code>) the templates will no longer link correctly. Using a reversed url mapping is more robust.</p>
 </div>
 
 <h3 id="View_function-based">View (function-based)</h3>
@@ -181,8 +177,7 @@ def index(request):
 <p>You can check this by saving the previous changes and accessing <code>127.0.0.1:8000</code> in your browser - it will display a fairly intuitive error message: "<code>TemplateDoesNotExist at /catalog/</code>", and other details.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Based on your project's settings file, Django will look for templates in a number of places, searching in your installed applications by default. You can find out more about how Django finds templates and what template formats it supports in <a href="https://docs.djangoproject.com/en/3.1/topics/templates/">the Templates section of the Django documentation</a>.</p>
+  <p><strong>Note:</strong> Based on your project's settings file, Django will look for templates in a number of places, searching in your installed applications by default. You can find out more about how Django finds templates and what template formats it supports in <a href="https://docs.djangoproject.com/en/3.1/topics/templates/">the Templates section of the Django documentation</a>.</p>
 </div>
 
 <h4 id="Extending_templates">Extending templates</h4>
@@ -194,8 +189,7 @@ def index(request):
 <p>The following code snippet is a sample base template from a <strong>base_generic.html</strong> file. We'll be creating the template for LocalLibrary shortly. The sample below includes common HTML with sections for a title, a sidebar, and main contents marked with the named <code>block</code> and <code>endblock</code> template tags, shown in bold. You can leave the blocks empty, or include default content to use when rendering pages derived from the template.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>Template <em>tags</em> are functions that you can use in a template to loop through lists, perform conditional operations based on the value of a variable, and so on. In addition to template tags, the template syntax allows you to reference variables that are passed into the template from the view, and use <em>template filters to</em> format variables (for example, to convert a string to lower case).</p>
+  <p><strong>Note:</strong> Template <em>tags</em> are functions that you can use in a template to loop through lists, perform conditional operations based on the value of a variable, and so on. In addition to template tags, the template syntax allows you to reference variables that are passed into the template from the view, and use <em>template filters to</em> format variables (for example, to convert a string to lower case).</p>
 </div>
 
 <pre class="brush: html">&lt;!DOCTYPE html&gt;
@@ -226,8 +220,7 @@ def index(request):
 <p>We will use the following code snippet as the base template for the <em>LocalLibrary</em> website. As you can see, it contains some HTML code and defines blocks for <code>title</code>, <code>sidebar</code>, and <code>content</code>. We have a default title and a default sidebar with links to lists of all books and authors, both enclosed in blocks to be easily changed in the future.</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>We also introduce two additional template tags: <code>url</code> and <code>load static</code>. These tags will be explained in following sections.</p>
+  <p><strong>Note:</strong> We also introduce two additional template tags: <code>url</code> and <code>load static</code>. These tags will be explained in following sections.</p>
 </div>
 
 <p>Create a new file <strong><em>base_generic.html </em></strong>in <strong>/locallibrary/catalog/templates/</strong> and paste the following code to the file:</p>
@@ -293,8 +286,7 @@ def index(request):
 <p>In the <em>Dynamic content</em> section we declare placeholders (<em>template variables</em>) for the information from the view that we want to include. The variables are enclosed with double brace (handlebars), as shown in bold in the code sample. </p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>You can easily recognize template variables and template tags (functions) - variables are enclosed in double braces (<code>\{{ num_books }}</code>), and tags are enclosed in single braces with percentage signs (<code>{% extends "base_generic.html" %}</code>).</p>
+  <p><strong>Note:</strong> You can easily recognize template variables and template tags (functions) - variables are enclosed in double braces (<code>\{{ num_books }}</code>), and tags are enclosed in single braces with percentage signs (<code>{% extends "base_generic.html" %}</code>).</p>
 </div>
 
 <p>The important thing to note here is that variables are named with the <em>keys</em> that we pass into the <code>context</code> dictionary in the <code>render()</code> function of our view (see sample below). Variables will be replaced with their associated <em>values</em> when the template is rendered.  </p>
@@ -325,8 +317,7 @@ return render(request, 'index.html', context=context)</pre>
 </pre>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The samples above specify where the files are located, but Django does not serve them by default. We configured the development web server to serve files by modifying the global URL mapper (<strong>/locallibrary/locallibrary/urls.py</strong>) when we <a href="/en-US/docs/Learn/Server-side/Django/skeleton_website">created the website skeleton</a>, but still need to enable file serving in production. We'll look at this later.</p>
+  <p><strong>Note:</strong> The samples above specify where the files are located, but Django does not serve them by default. We configured the development web server to serve files by modifying the global URL mapper (<strong>/locallibrary/locallibrary/urls.py</strong>) when we <a href="/en-US/docs/Learn/Server-side/Django/skeleton_website">created the website skeleton</a>, but still need to enable file serving in production. We'll look at this later.</p>
 </div>
 
 <p>For more information on working with static files see <a href="https://docs.djangoproject.com/en/3.1/howto/static-files/">Managing static files</a> in the Django documentation.</p>
@@ -365,8 +356,7 @@ return render(request, 'index.html', context=context)</pre>
 <p>We can also specify specific locations for Django to search for directories using <code>'DIRS': []</code> (but that isn't needed yet).</p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>You can find out more about how Django finds templates and what template formats it supports in <a href="https://docs.djangoproject.com/en/3.1/topics/templates/">the Templates section of the Django documentation</a>.</p>
+  <p><strong>Note:</strong> You can find out more about how Django finds templates and what template formats it supports in <a href="https://docs.djangoproject.com/en/3.1/topics/templates/">the Templates section of the Django documentation</a>.</p>
 </div>
 
 <h2 id="What_does_it_look_like">What does it look like?</h2>
@@ -376,8 +366,7 @@ return render(request, 'index.html', context=context)</pre>
 <p><img alt="Index page for LocalLibrary website" src="index_page_ok.png" style="border-style: solid; border-width: 1px; display: block; margin: 0px auto;"></p>
 
 <div class="notecard note">
-  <h4>Note</h4>
-  <p>The <strong>All books</strong> and <strong>All authors</strong> links will not work yet because the paths, views, and templates for those pages are not defined. We just inserted placeholders for those links in the <code>base_generic.html</code> template.</p>
+  <p><strong>Note:</strong> The <strong>All books</strong> and <strong>All authors</strong> links will not work yet because the paths, views, and templates for those pages are not defined. We just inserted placeholders for those links in the <code>base_generic.html</code> template.</p>
 </div>
 
 <h2 id="Challenge_yourself">Challenge yourself</h2>
